--- a/.gitignore
+++ b/.gitignore
@@ -305,3 +305,34 @@ WinUpdateFrameWork/obj/Debug/WinUpdateFrameWork.exe
 WinUpdateFrameWork/obj/Debug/WinUpdateFrameWork.pdb
 WinUpdate/obj/Debug/net5.0-windows/WinUpdate.assets.cache
 WinDownload/obj/Debug/net5.0-windows/apphost.exe
+WinDownload/bin/Debug/net5.0-windows/FileUpdate.dll
+WinDownload/bin/Debug/net5.0-windows/FileUpdate.pdb
+WinDownload/bin/Debug/net5.0-windows/ref/WinDownload.dll
+WinDownload/bin/Debug/net5.0-windows/WinDownload.dll
+WinDownload/bin/Debug/net5.0-windows/WinDownload.exe
+WinDownload/bin/Debug/net5.0-windows/WinDownload.pdb
+WinDownload/bin/Debug/net5.0-windows/WinDownload.runtimeconfig.dev.json
+WinDownload/obj/Debug/net5.0-windows/apphost.exe
+WinDownload/obj/Debug/net5.0-windows/ref/WinDownload.dll
+WinDownload/obj/Debug/net5.0-windows/WinDownload.assets.cache
+WinDownload/obj/Debug/net5.0-windows/WinDownload.csproj.AssemblyReference.cache
+WinDownload/obj/Debug/net5.0-windows/WinDownload.csproj.CoreCompileInputs.cache
+WinDownload/obj/Debug/net5.0-windows/WinDownload.csproj.FileListAbsolute.txt
+WinDownload/obj/Debug/net5.0-windows/WinDownload.dll
+WinDownload/obj/Debug/net5.0-windows/WinDownload.genruntimeconfig.cache
+WinDownload/obj/Debug/net5.0-windows/WinDownload.pdb
+WinDownload/obj/project.assets.json
+WinDownload/obj/WinDownload.csproj.nuget.dgspec.json
+WinDownload/obj/WinDownload.csproj.nuget.g.props
+WinUpdate/bin/Debug/net5.0-windows/WinUpdate.dll
+WinUpdate/bin/Debug/net5.0-windows/WinUpdate.pdb
+WinUpdate/obj/Debug/net5.0-windows/WinUpdate.assets.cache
+WinUpdate/obj/Debug/net5.0-windows/WinUpdate.csproj.AssemblyReference.cache
+WinUpdate/obj/Debug/net5.0-windows/WinUpdate.csproj.CoreCompileInputs.cache
+WinUpdate/obj/Debug/net5.0-windows/WinUpdate.csproj.FileListAbsolute.txt
+WinUpdate/obj/Debug/net5.0-windows/WinUpdate.dll
+WinUpdate/obj/Debug/net5.0-windows/WinUpdate.genruntimeconfig.cache
+WinUpdate/obj/Debug/net5.0-windows/WinUpdate.pdb
+WinUpdate/obj/project.assets.json
+WinUpdate/obj/WinUpdate.csproj.nuget.dgspec.json
+WinUpdate/obj/WinUpdate.csproj.nuget.g.props
