--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,82 @@ WinUpdate/obj/WinUpdate.csproj.nuget.dgspec.json
 WinUpdate/obj/WinUpdate.csproj.nuget.g.props
 WinDownload/obj/Debug/net5.0-windows/apphost.exe
 WinUpdate/obj/Debug/net5.0-windows/WinUpdate.assets.cache
+.vs/UpdateForCSKYPF/DesignTimeBuild/.dtbcache.v2
+.vs/UpdateForCSKYPF/v17/.suo
+CSIISHelper/bin/Release/net6.0/CSIISHelper.deps.json
+CSIISHelper/bin/Release/net6.0/CSIISHelper.dll
+CSIISHelper/bin/Release/net6.0/CSIISHelper.dll.config
+CSIISHelper/bin/Release/net6.0/CSIISHelper.exe
+CSIISHelper/bin/Release/net6.0/CSIISHelper.pdb
+CSIISHelper/bin/Release/net6.0/CSIISHelper.runtimeconfig.json
+CSIISHelper/bin/Release/net6.0/FileHelper.dll
+CSIISHelper/bin/Release/net6.0/FileHelper.pdb
+CSIISHelper/bin/Release/net6.0/log4net.dll
+CSIISHelper/bin/Release/net6.0/Microsoft.Win32.SystemEvents.dll
+CSIISHelper/bin/Release/net6.0/Newtonsoft.Json.dll
+CSIISHelper/bin/Release/net6.0/Pipelines.Sockets.Unofficial.dll
+CSIISHelper/bin/Release/net6.0/protobuf-net.Core.dll
+CSIISHelper/bin/Release/net6.0/protobuf-net.dll
+CSIISHelper/bin/Release/net6.0/runtimes/unix/lib/netcoreapp3.0/System.Drawing.Common.dll
+CSIISHelper/bin/Release/net6.0/runtimes/win/lib/netcoreapp3.0/Microsoft.Win32.SystemEvents.dll
+CSIISHelper/bin/Release/net6.0/runtimes/win/lib/netcoreapp3.0/System.Drawing.Common.dll
+CSIISHelper/bin/Release/net6.0/runtimes/win/lib/netcoreapp3.0/System.Windows.Extensions.dll
+CSIISHelper/bin/Release/net6.0/SAEA.Common.dll
+CSIISHelper/bin/Release/net6.0/SAEA.FileSocket.dll
+CSIISHelper/bin/Release/net6.0/SAEA.Sockets.dll
+CSIISHelper/bin/Release/net6.0/SuperSocket.Common.dll
+CSIISHelper/bin/Release/net6.0/SuperSocket.Facility.dll
+CSIISHelper/bin/Release/net6.0/SuperSocket.SocketBase.dll
+CSIISHelper/bin/Release/net6.0/SuperSocket.WebSocket.dll
+CSIISHelper/bin/Release/net6.0/System.Drawing.Common.dll
+CSIISHelper/bin/Release/net6.0/System.IO.Pipelines.dll
+CSIISHelper/bin/Release/net6.0/System.Security.Permissions.dll
+CSIISHelper/bin/Release/net6.0/System.Windows.Extensions.dll
+CSIISHelper/obj/Release/net6.0/apphost.exe
+CSIISHelper/obj/Release/net6.0/CSIISHelper.csproj.AssemblyReference.cache
+CSIISHelper/obj/Release/net6.0/CSIISHelper.csproj.CopyComplete
+CSIISHelper/obj/Release/net6.0/CSIISHelper.csproj.FileListAbsolute.txt
+CSIISHelper/obj/Release/net6.0/CSIISHelper.dll
+CSIISHelper/obj/Release/net6.0/CSIISHelper.genruntimeconfig.cache
+CSIISHelper/obj/Release/net6.0/CSIISHelper.pdb
+CSIISHelper/obj/Release/net6.0/ref/CSIISHelper.dll
+CSIISHelper/obj/Release/net6.0/refint/CSIISHelper.dll
+CSIISHelper/obj/publish/win-x86/CSIISHelper.csproj.nuget.dgspec.json
+CSIISHelper/obj/publish/win-x86/CSIISHelper.csproj.nuget.g.props
+CSIISHelper/obj/publish/win-x86/CSIISHelper.csproj.nuget.g.targets
+CSIISHelper/obj/publish/win-x86/project.assets.json
+CSIISHelper/obj/publish/win-x86/project.nuget.cache
+CSIISHelper/obj/Release/net6.0/CSIISHelper.csproj.AssemblyReference.cache
+CSIISHelper/obj/Release/net6.0/CSIISHelper.csproj.FileListAbsolute.txt
+CSIISHelper/Properties/PublishProfiles/FolderProfile.pubxml.user
+FileHelper/bin/Release/net6.0/FileHelper.deps.json
+FileHelper/bin/Release/net6.0/FileHelper.dll
+FileHelper/bin/Release/net6.0/FileHelper.pdb
+FileHelper/obj/FileHelper.csproj.nuget.dgspec.json
+FileHelper/obj/FileHelper.csproj.nuget.g.props
+FileHelper/obj/FileHelper.csproj.nuget.g.targets
+FileHelper/obj/project.assets.json
+FileHelper/obj/project.nuget.cache
+FileHelper/obj/Release/net6.0/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
+FileHelper/obj/Release/net6.0/FileHelper.AssemblyInfo.cs
+FileHelper/obj/Release/net6.0/FileHelper.AssemblyInfoInputs.cache
+FileHelper/obj/Release/net6.0/FileHelper.assets.cache
+FileHelper/obj/Release/net6.0/FileHelper.csproj.AssemblyReference.cache
+FileHelper/obj/Release/net6.0/FileHelper.csproj.CoreCompileInputs.cache
+FileHelper/obj/Release/net6.0/FileHelper.csproj.FileListAbsolute.txt
+FileHelper/obj/Release/net6.0/FileHelper.dll
+FileHelper/obj/Release/net6.0/FileHelper.GeneratedMSBuildEditorConfig.editorconfig
+FileHelper/obj/Release/net6.0/FileHelper.pdb
+FileHelper/obj/Release/net6.0/ref/FileHelper.dll
+FileHelper/obj/Release/net6.0/refint/FileHelper.dll
+CSIISHelper/Properties/PublishProfiles/FolderProfile.pubxml.user
+CSIISHelper/obj/Release/net6.0/CSIISHelper.csproj.FileListAbsolute.txt
+CSIISHelper/obj/Release/net6.0/CSIISHelper.csproj.AssemblyReference.cache
+CSIISHelper/obj/publish/win-x86/project.nuget.cache
+CSIISHelper/obj/publish/win-x86/project.assets.json
+CSIISHelper/obj/publish/win-x86/CSIISHelper.csproj.nuget.g.targets
+CSIISHelper/obj/publish/win-x86/CSIISHelper.csproj.nuget.g.props
+CSIISHelper/obj/publish/win-x86/CSIISHelper.csproj.nuget.dgspec.json
+.vs/UpdateForCSKYPF/DesignTimeBuild/.dtbcache.v2
+.vs/UpdateForCSKYPF/DesignTimeBuild/.dtbcache.v2
+.vs/UpdateForCSKYPF/v17/.suo
