--- a/CSIISHelper/App.config
+++ b/CSIISHelper/App.config
@@ -7,7 +7,7 @@
   <appSettings>
     <add key="ServiceName" value="SupperSocketService" />
   </appSettings>
-  <superSocket>
+  <superSocket logFactory="ConsoleLogFactory">
     <servers>
       <server name="TelnetServerA"
               serverTypeName="TelnetServer"
@@ -24,5 +24,9 @@
       <add name="TelnetServer"
            type="SuperSocket.QuickStart.TelnetServer_StartByConfig.TelnetServer, SuperSocket.QuickStart.TelnetServer_StartByConfig"/>
     </serverTypes>
+	  <logFactories>
+		  <add name="ConsoleLogFactory"
+			   type="SuperSocket.SocketBase.Logging.ConsoleLogFactory, SuperSocket.SocketBase" />
+	  </logFactories>
   </superSocket>
 </configuration>
