--- a/.gitignore
+++ b/.gitignore
@@ -427,3 +427,78 @@ CSIISHelper/obj/publish/win-x86/CSIISHelper.csproj.nuget.dgspec.json
 .vs/UpdateForCSKYPF/DesignTimeBuild/.dtbcache.v2
 .vs/UpdateForCSKYPF/DesignTimeBuild/.dtbcache.v2
 .vs/UpdateForCSKYPF/v17/.suo
+.vs/UpdateForCSKYPF/v17/.suo
+CSIISHelper/bin/Release/net6.0/publish/win-x86/CSIISHelper.deps.json
+CSIISHelper/bin/Release/net6.0/publish/win-x86/CSIISHelper.dll
+CSIISHelper/bin/Release/net6.0/publish/win-x86/CSIISHelper.dll.config
+CSIISHelper/bin/Release/net6.0/publish/win-x86/CSIISHelper.exe
+CSIISHelper/bin/Release/net6.0/publish/win-x86/CSIISHelper.pdb
+CSIISHelper/bin/Release/net6.0/publish/win-x86/CSIISHelper.runtimeconfig.json
+CSIISHelper/bin/Release/net6.0/publish/win-x86/FileHelper.dll
+CSIISHelper/bin/Release/net6.0/publish/win-x86/FileHelper.pdb
+CSIISHelper/bin/Release/net6.0/publish/win-x86/log4net.dll
+CSIISHelper/bin/Release/net6.0/publish/win-x86/Microsoft.Win32.SystemEvents.dll
+CSIISHelper/bin/Release/net6.0/publish/win-x86/Newtonsoft.Json.dll
+CSIISHelper/bin/Release/net6.0/publish/win-x86/Pipelines.Sockets.Unofficial.dll
+CSIISHelper/bin/Release/net6.0/publish/win-x86/protobuf-net.Core.dll
+CSIISHelper/bin/Release/net6.0/publish/win-x86/protobuf-net.dll
+CSIISHelper/bin/Release/net6.0/publish/win-x86/SAEA.Common.dll
+CSIISHelper/bin/Release/net6.0/publish/win-x86/SAEA.FileSocket.dll
+CSIISHelper/bin/Release/net6.0/publish/win-x86/SAEA.Sockets.dll
+CSIISHelper/bin/Release/net6.0/publish/win-x86/SuperSocket.Common.dll
+CSIISHelper/bin/Release/net6.0/publish/win-x86/SuperSocket.Facility.dll
+CSIISHelper/bin/Release/net6.0/publish/win-x86/SuperSocket.SocketBase.dll
+CSIISHelper/bin/Release/net6.0/publish/win-x86/SuperSocket.WebSocket.dll
+CSIISHelper/bin/Release/net6.0/publish/win-x86/System.Drawing.Common.dll
+CSIISHelper/bin/Release/net6.0/publish/win-x86/System.IO.Pipelines.dll
+CSIISHelper/bin/Release/net6.0/publish/win-x86/System.Security.Permissions.dll
+CSIISHelper/bin/Release/net6.0/publish/win-x86/System.Windows.Extensions.dll
+CSIISHelper/bin/Release/net6.0/win-x86/CSIISHelper.deps.json
+CSIISHelper/bin/Release/net6.0/win-x86/CSIISHelper.dll
+CSIISHelper/bin/Release/net6.0/win-x86/CSIISHelper.dll.config
+CSIISHelper/bin/Release/net6.0/win-x86/CSIISHelper.exe
+CSIISHelper/bin/Release/net6.0/win-x86/CSIISHelper.pdb
+CSIISHelper/bin/Release/net6.0/win-x86/CSIISHelper.runtimeconfig.json
+CSIISHelper/bin/Release/net6.0/win-x86/FileHelper.dll
+CSIISHelper/bin/Release/net6.0/win-x86/FileHelper.pdb
+CSIISHelper/bin/Release/net6.0/win-x86/log4net.dll
+CSIISHelper/bin/Release/net6.0/win-x86/Microsoft.Win32.SystemEvents.dll
+CSIISHelper/bin/Release/net6.0/win-x86/Newtonsoft.Json.dll
+CSIISHelper/bin/Release/net6.0/win-x86/Pipelines.Sockets.Unofficial.dll
+CSIISHelper/bin/Release/net6.0/win-x86/protobuf-net.Core.dll
+CSIISHelper/bin/Release/net6.0/win-x86/protobuf-net.dll
+CSIISHelper/bin/Release/net6.0/win-x86/SAEA.Common.dll
+CSIISHelper/bin/Release/net6.0/win-x86/SAEA.FileSocket.dll
+CSIISHelper/bin/Release/net6.0/win-x86/SAEA.Sockets.dll
+CSIISHelper/bin/Release/net6.0/win-x86/SuperSocket.Common.dll
+CSIISHelper/bin/Release/net6.0/win-x86/SuperSocket.Facility.dll
+CSIISHelper/bin/Release/net6.0/win-x86/SuperSocket.SocketBase.dll
+CSIISHelper/bin/Release/net6.0/win-x86/SuperSocket.WebSocket.dll
+CSIISHelper/bin/Release/net6.0/win-x86/System.Drawing.Common.dll
+CSIISHelper/bin/Release/net6.0/win-x86/System.IO.Pipelines.dll
+CSIISHelper/bin/Release/net6.0/win-x86/System.Security.Permissions.dll
+CSIISHelper/bin/Release/net6.0/win-x86/System.Windows.Extensions.dll
+CSIISHelper/obj/publish/win-x86/CSIISHelper.csproj.nuget.dgspec.json
+CSIISHelper/obj/publish/win-x86/CSIISHelper.csproj.nuget.g.props
+CSIISHelper/obj/publish/win-x86/CSIISHelper.csproj.nuget.g.targets
+CSIISHelper/obj/publish/win-x86/project.assets.json
+CSIISHelper/obj/publish/win-x86/project.nuget.cache
+CSIISHelper/obj/Release/net6.0/win-x86/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
+CSIISHelper/obj/Release/net6.0/win-x86/apphost.exe
+CSIISHelper/obj/Release/net6.0/win-x86/CSIISHelper.AssemblyInfo.cs
+CSIISHelper/obj/Release/net6.0/win-x86/CSIISHelper.AssemblyInfoInputs.cache
+CSIISHelper/obj/Release/net6.0/win-x86/CSIISHelper.assets.cache
+CSIISHelper/obj/Release/net6.0/win-x86/CSIISHelper.csproj.AssemblyReference.cache
+CSIISHelper/obj/Release/net6.0/win-x86/CSIISHelper.csproj.CopyComplete
+CSIISHelper/obj/Release/net6.0/win-x86/CSIISHelper.csproj.CoreCompileInputs.cache
+CSIISHelper/obj/Release/net6.0/win-x86/CSIISHelper.csproj.FileListAbsolute.txt
+CSIISHelper/obj/Release/net6.0/win-x86/CSIISHelper.dll
+CSIISHelper/obj/Release/net6.0/win-x86/CSIISHelper.GeneratedMSBuildEditorConfig.editorconfig
+CSIISHelper/obj/Release/net6.0/win-x86/CSIISHelper.genruntimeconfig.cache
+CSIISHelper/obj/Release/net6.0/win-x86/CSIISHelper.pdb
+CSIISHelper/obj/Release/net6.0/win-x86/PublishOutputs.1bce422062.txt
+CSIISHelper/obj/Release/net6.0/win-x86/PublishOutputs.62ba1b3ab4.txt
+CSIISHelper/obj/Release/net6.0/win-x86/ref/CSIISHelper.dll
+CSIISHelper/obj/Release/net6.0/win-x86/refint/CSIISHelper.dll
+CSIISHelper/Properties/PublishProfiles/FolderProfile.pubxml
+CSIISHelper/Properties/PublishProfiles/FolderProfile.pubxml.user
