--- a/CSIISHelper/CSIISHelper.csproj
+++ b/CSIISHelper/CSIISHelper.csproj
@@ -9,4 +9,10 @@
     <ProjectReference Include="..\FileHelper\FileHelper.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
