--- a/FileHelper/FileHelper.csproj
+++ b/FileHelper/FileHelper.csproj
@@ -5,10 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="SuperSocket\ResultInfo.cs" />
+    <Compile Remove="SuperSocket\TelnetServer.cs" />
+    <Compile Remove="SuperSocket\TelnetSession.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="SAEA.FileSocket" Version="7.0.0.2" />
-    <PackageReference Include="SuperSocket" Version="1.6.6.1" />
-    <PackageReference Include="SuperSocket.WebSocket" Version="1.6.6.1" />
+    <PackageReference Include="SuperSocket" Version="2.0.0-beta.10" />
+    <PackageReference Include="SuperSocket.WebSocket.Server" Version="2.0.0-beta.10" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+    <PackageReference Include="Websocket.Client" Version="4.4.43" />
   </ItemGroup>
 
 </Project>
